part1/1.11/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: file-claim
      containers:
        - name: logoutput-reader
          image: akiradock/logoutput-reader
          volumeMounts:
          - mountPath: /usr/src/app/files
            name: shared-file
        - name: logoutput-writer
          image: akiradock/logoutput-writer
          volumeMounts:
          - mountPath: /usr/src/app/files
            name: shared-file
